--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-setuptools>=65.0.0
-wheel
-flask==3.0.0
-pandas==2.1.4
-scikit-learn==1.3.2
+setuptools>=68.0.0
+wheel>=0.40.0
+flask==2.3.2
+pandas==2.0.3
+scikit-learn==1.3.0
 python-dotenv==1.0.0
 numpy==1.24.2
 scipy==1.10.1
 requests==2.28.2
 flask-cors==4.0.0
-waitress
+waitress==2.1.2
